optimizations XJmfMessage